projet final structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,14 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIERED TRUE)
 
 #export configuration to source code
-configure_file(HelloProjConfig.h.in HelloProjConfig.h)
+configure_file(CMake/HelloProjConfig.h.in HelloProjConfig.h)
 
-#add the executable target named HelloWorld
-add_executable(HelloWorld hello.cpp)
+#add librairie
+add_subdirectory(Src/Basic)
 
-# add binary tree to the list of paths to search includes
-target_include_directories(HelloWorld PUBLIC "${PROJECT_BINARY_DIR}")
+#add executable
+option(HELLOWORD_WITH_EXECUTABLES "Compile mains" ON)
+if(HELLOWORD_WITH_EXECUTABLES)
+ message(STATUS "Configuring Hello World with executables")
+ add_subdirectory(Main)
+endif()
