--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,16 @@ configure_file(CMake/HelloProjConfig.h.in HelloProjConfig.h)
 add_subdirectory(Src/Basic)
 
 #add executable
-option(HELLOWORD_WITH_EXECUTABLES "Compile mains" ON)
+option(HELLOWORD_WITH_EXECUTABLES"Compile mains" ON)
 if(HELLOWORD_WITH_EXECUTABLES)
  message(STATUS "Configuring Hello World with executables")
  add_subdirectory(Main)
+endif()
+
+#add tests 
+option(HELLOWORLD_WITH_TESTS"compile tests" ON)
+if (HELLOWORLD_WITH_TESTS)
+  enable_testing()
+  message(STATUS"Configuring Hello World with tests")
+  add_subdirectory(Test)
 endif()
