projet tests indépendants

--- a/Src/Basic/CMakeLists.txt
+++ b/Src/Basic/CMakeLists.txt
@@ -9,3 +9,5 @@ target_include_directories(${target_name}
  "${PROJECT_SOURCE_DIR}/Include"
  "${PROJECT_BINARY_DIR}"
 )
+export(TARGETS ${target_name} FILE 
+${PROJECT_BINARY_DIR}/${target_name}_target.cmake )
