module install dispo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,19 @@ cmake/HelloProjConfig.cmake.in
 HelloProjConfig.cmake 
 INSTALL_DESTINATION cmake/
 )
+
+#install project configuration file
+install(
+FILES ${PROJECT_BINARY_DIR}/HelloProjConfig.cmake 
+DESTINATION cmake/ 
+)
+
+# Configure CPack
+if(WIN32)
+ set(CPACK_GENERATOR "ZIP")
+else()
+ set(CPACK_GENERATOR "TGZ")
+endif()
+# This must always be last!
+include(CPack)
+
