--- a/Main/CMakeLists.txt
+++ b/Main/CMakeLists.txt
@@ -1,4 +1,4 @@
 #add the executable target named HelloWorld
 add_executable(HelloWorld hello.cpp)
 target_link_libraries(HelloWorld PRIVATE Basic)
-
+install(TARGETS HelloWorld DESTINATION bin)
