--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,10 +11,10 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  format:
-    uses: Geode-solutions/actions/.github/workflows/format.yml@master
-    secrets:
-      TOKEN: ${{ secrets.TOKEN }}
+  # format:
+  #   uses: Geode-solutions/actions/.github/workflows/format.yml@master
+  #   secrets:
+  #     TOKEN: ${{ secrets.TOKEN }}
 
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
